Exportdata/main/default/objects/Rental_Aggrement__c/Rental_Aggrement__c.object-meta.xml
<CustomObject>
    <label>Rental Agreement</label>
    <nameField>
        <label>Rental Aggrement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rental Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>