Exportdata/main/default/objects/Rental_Aggrement__c/fields/Customer_EmailId__c.field-meta.xml
<CustomField>
    <fullName>Customer_EmailId__c</fullName>
    <label>Customer EmailId</label>
    <type>Email</type>
</CustomField>