Exportdata/main/default/objects/Rental_Aggrement__c/fields/CustomerInfo_Name__c.field-meta.xml
<CustomField>
    <fullName>CustomerInfo_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CustomerInfo Name</label>
    <referenceTo>CustomerInfo__c</referenceTo>
    <relationshipLabel>Rental Agreements</relationshipLabel>
    <relationshipName>Rental_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>