Exportdata/main/default/objects/Rental_Aggrement__c/fields/Deposite__c.field-meta.xml
<CustomField>
    <fullName>Deposite__c</fullName>
    <label>Deposite</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>