Exportdata/main/default/objects/Rental_Aggrement__c/fields/Rental_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rental_Amount__c</fullName>
    <label>Rental Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>