Exportdata/main/default/objects/Rental_Aggrement__c/fields/Rental_Unit_Name__c.field-meta.xml
<CustomField>
    <fullName>Rental_Unit_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rental Unit Name</label>
    <referenceTo>Property_Unit__c</referenceTo>
    <relationshipLabel>Rental Agreements</relationshipLabel>
    <relationshipName>Rental_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>