Exportdata/main/default/objects/Rental_Aggrement__c/fields/Renter_EmailId__c.field-meta.xml
<CustomField>
    <fullName>Renter_EmailId__c</fullName>
    <label>Renter EmailId</label>
    <type>Email</type>
</CustomField>