Exportdata/main/default/objects/Rental_Aggrement__c/fields/Renter_Info_Name__c.field-meta.xml
<CustomField>
    <fullName>Renter_Info_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Renter Info Name</label>
    <referenceTo>Renter_Information__c</referenceTo>
    <relationshipLabel>Rental Agreements</relationshipLabel>
    <relationshipName>Rental_Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>